# rpg_vikit

./: README.md
vikit_cameras/: CMakeLists.txt  package.xml
vikit_cameras/include/vikit/: cameras.h
vikit_cameras/include/vikit/cameras/: atan_distortion.h  camera_factory.h  camera_geometry.h  camera_geometry_base.h  equidistant_distortion.h  no_distortion.h  pinhole_projection.h  radial_tangential_distortion.h
vikit_cameras/include/vikit/cameras/implementation/: camera_geometry.hpp  pinhole_projection.hpp
vikit_cameras/src/: camera_factory.cpp
vikit_cameras/test/: test_cameras.cpp
vikit_cameras/test/data/: calib_pinhole_atan.yaml  calib_pinhole_equidistant.yaml  calib_pinhole_nodistortion.yaml  calib_pinhole_radtan.yaml
vikit_common/: CMakeLists.txt  package.xml
vikit_common/include/vikit/: abstract_camera.h  atan_camera.h  blender_utils.h  homography.h  homography_decomp.h  math_utils.h  nlls_solver.h  nlls_solver_impl.hpp  omni_camera.h  patch_score.h  pinhole_camera.h  pinhole_equidistant_camera.h  ringbuffer.h  robust_cost.h  sample.h  test_utils.h  vision.h
vikit_common/src/: abstract_camera.cpp  atan_camera.cpp  homography.cpp  math_utils.cpp  omni_camera.cpp  pinhole_camera.cpp  pinhole_equidistant_camera.cpp  robust_cost.cpp  vision.cpp
vikit_common/test/: test_camera.cpp  test_homography.cpp  test_patch_score.cpp
vikit_py/src/vikit_py/: align_trajectory.py  associate_timestamps.py  ros_node.py  transformations.py
vikit_ros/: CMakeLists.txt  package.xml
vikit_ros/include/vikit/: camera_loader.h  output_helper.h
vikit_ros/src/: output_helper.cpp
vikit_solver/include/vikit/solver/: mini_least_squares_solver.h
vikit_solver/include/vikit/solver/implementation/: mini_least_squares_solver.hpp
vikit_solver/src/: robust_cost.cpp
