<?xml version="1.0"?>
<package>
  <name>vikit_cameras</name>
  <version>0.0.0</version>
  <description>The vikit_cameras package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>yaml_cpp_catkin</build_depend>
  <build_depend>minkindr</build_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>yaml_cpp_catkin</run_depend>
  <run_depend>minkindr</run_depend>
  <test_depend>gtest</test_depend>

</package>