<?xml version="1.0"?>
<package>
  <name>vikit_common</name>
  <version>0.0.0</version>
  <description>The vikit_common package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
  <build_depend>libyaml-cpp</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>libyaml-cpp</run_depend>

  <test_depend>gtest</test_depend>
  
</package>