<?xml version="1.0"?>
<package>
  <name>vikit_common</name>
  <version>0.0.0</version>
  <description>The vikit_common package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <build_depend>minkindr</build_depend>
  <build_depend>yaml_cpp_catkin</build_depend>
  <build_depend>opencv2_catkin</build_depend>
  <build_depend>glog_catkin</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>eigen_catkin</run_depend>
  <run_depend>minkindr</run_depend>
  <run_depend>yaml_cpp_catkin</run_depend>
  <run_depend>opencv2_catkin</run_depend>
  <run_depend>glog_catkin</run_depend>
  <test_depend>gtest</test_depend>

</package>
