<?xml version="1.0"?>
<package>
  <name>vikit_ros</name>
  <version>0.0.0</version>
  <description>The vikit_ros package</description>
  <maintainer email="forster@ifi.uzh.ch">cforster</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend> <!-- for FindEigen.cmake module -->
  <build_depend>vikit_common</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>eigen_catkin</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vikit_common</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>eigen_catkin</run_depend>

</package>